# chatwoot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Gemfile  Procfile.dev  README.md  docker-compose.ai.yml  docker-compose.production.yaml  docker-compose.test.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml
.circleci/: config.yml
.github/workflows/: build-ai-engine.yml  run_foss_spec.yml
ai_engine/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai_engine/api_gateway/: main.py
ai_engine/docker/: .env.production.example  build.sh  deploy.sh  swarm-stack.yml
ai_engine/shared/: __init__.py  config.py  constants.py  schemas.py
ai_engine/shared/services/: __init__.py  chatwoot_client.py  idempotency.py  tenant_config.py
ai_engine/worker/: agent_graph.py  main.py
app/dashboards/: account_dashboard.rb
app/listeners/: agent_bot_listener.rb
app/models/: account.rb  agent_bot.rb  ai_agent_subscription.rb  calendar_event.rb  calendar_event_attendee.rb  calendar_event_link.rb  calendar_integration.rb  company.rb  contact.rb  conversation.rb  opportunity.rb  opportunity_activity.rb  opportunity_conversation.rb  opportunity_item.rb  opportunity_stage_change.rb  pipeline.rb  pipeline_stage.rb
app/policies/: calendar_event_policy.rb  calendar_integration_policy.rb  opportunity_activity_policy.rb  opportunity_item_policy.rb  (+3 more)
config/: app.yml  features.yml  installation_config.yml  routes.rb
db/: schema.rb
docker/: Dockerfile
docs/: GOOGLE_CALENDAR_INTEGRATION.md
lib/: chatwoot_hub.rb
swagger/: swagger.json
theme/: icons.js
(+524 files in other folders)
